--- a/pages/16984.html
+++ b/pages/16984.html
@@ -318,28 +318,28 @@ margin-left: 0em;
 
 <ul>
 <li>
-<p>Jared Weinstein, <em><a href='https://galoisrepresentations.wordpress.com/2013/07/23/the-fundamental-curve-of-p-adic-hodge-theory-or-how-to-un-tilt-a-tilted-field/'>The Fundamental Curve of p-adic Hodge Theory, or How to Un-tilt a Tilted Field</a></em></p>
+<p><a class='existingWikiWord' href='/nlab/show/Jared+Weinstein'>Jared Weinstein</a>, <em><a href='https://galoisrepresentations.wordpress.com/2013/07/23/the-fundamental-curve-of-p-adic-hodge-theory-or-how-to-un-tilt-a-tilted-field/'>The Fundamental Curve of p-adic Hodge Theory, or How to Un-tilt a Tilted Field</a></em></p>
 </li>
 
 <li>
-<p>Jared Weinstein, <em><a href='https://galoisrepresentations.wordpress.com/2013/08/12/the-fundamental-curve-of-p-adic-hodge-theory-part-ii/'>The Fundamental Curve of p-adic Hodge Theory, Part II</a></em></p>
+<p><a class='existingWikiWord' href='/nlab/show/Jared+Weinstein'>Jared Weinstein</a>, <em><a href='https://galoisrepresentations.wordpress.com/2013/08/12/the-fundamental-curve-of-p-adic-hodge-theory-part-ii/'>The Fundamental Curve of p-adic Hodge Theory, Part II</a></em></p>
 </li>
 
 <li>
-<p>Harvard Seminar on Fargues-Fontiane Curve (<a href='http://www.math.harvard.edu/~lurie/FF.html'>Informal Notes</a> by <a class='existingWikiWord' href='/nlab/show/Jacob+Lurie'>Jacob Lurie</a>, <a class='existingWikiWord' href='/nlab/show/Dennis+Gaitsgory'>Dennis Gaitsgory</a>, etc.)</p>
+<p><a class='existingWikiWord' href='/nlab/show/Dennis+Gaitsgory'>Dennis Gaitsgory</a>, <a class='existingWikiWord' href='/nlab/show/Jacob+Lurie'>Jacob Lurie</a>, <em>Harvard Seminar on Fargues-Fontiane Curve</em> (<a href='http://www.math.harvard.edu/~lurie/FF.html'>Informal Notes</a>)</p>
 </li>
 </ul>
 </div>
 
 <div class="revisedby">
-  Revised on September 30, 2017 01:20:27 
-  by <a class="existingWikiWord" href="/nlab/show/Tim+Porter">Tim Porter</a>
-  (2a01:cb04:5b1:2f00:b190:87b4:5767:5a5d)
+  Revised on September 30, 2017 06:19:54 
+  by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
+  (94.220.50.90)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Fargues-Fontaine+curve" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Fargues-Fontaine+curve/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/Fargues-Fontaine+curve" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Fargues-Fontaine+curve" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Fargues-Fontaine+curve" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Fargues-Fontaine+curve/3" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(3 revisions)</span> | <a href="/nlab/show/diff/Fargues-Fontaine+curve" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Fargues-Fontaine+curve" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
