--- a/pages/18654.html
+++ b/pages/18654.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <title>
-      fields and quanta - table in nLab
+      pion in nLab
   </title>
 
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -283,7 +283,7 @@ margin-left: 0em;
         c9-9,20-18,33-22C159,52,166,54,170,60' />
     </svg></span>
       <span class="webName">nLab</span><br />
-      fields and quanta - table
+      pion
   </h1>
 
 
@@ -308,7 +308,14 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <p><a class='existingWikiWord' href='/nlab/show/field+%28physics%29'>field (physics)</a></p>
+    <div class='rightHandSide'>
+<div class='toc clickDown' tabindex='0'>
+<h3 id='context'>Context</h3>
+
+<h4 id='fields_and_quanta'>Fields and quanta</h4>
+
+<div class='hide'>
+<p><a class='existingWikiWord' href='/nlab/show/field+%28physics%29'>field (physics)</a></p>
 
 <p><strong><a class='existingWikiWord' href='/nlab/show/standard+model+of+particle+physics'>standard model of particle physics</a></strong></p>
 
@@ -426,24 +433,36 @@ margin-left: 0em;
 </li>
 </ul>
 </div>
+</div>
+</div>
+
+<h2 id='references'>References</h2>
+
+<ul>
+<li>Wikipedia, <em><a href='https://en.wikipedia.org/wiki/Pion'>Pion</a></em></li>
+</ul>
+
+<p>
+</p>
+</div>
 
 <div class="revisedby">
-  Revised on September 30, 2017 12:42:00 
+  Created on September 30, 2017 12:41:04 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
   (94.220.50.90)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/fields+and+quanta+-+table" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/fields+and+quanta+-+table/6" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(6 revisions)</span> | <a href="/nlab/show/diff/fields+and+quanta+-+table" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/fields+and+quanta+-+table" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/pion" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
   
   <span class="views">
     | Views: 
-    <a href="/nlab/print/fields+and+quanta+-+table" accesskey="p" id="view_print" rel="nofollow">Print</a>
+    <a href="/nlab/print/pion" accesskey="p" id="view_print" rel="nofollow">Print</a>
     | 
-    <a href="/nlab/tex/fields+and+quanta+-+table" id="view_tex" rel="nofollow">TeX</a>
+    <a href="/nlab/tex/pion" id="view_tex" rel="nofollow">TeX</a>
     |
-    <a href="/nlab/source/fields+and+quanta+-+table" id="view_source" rel="nofollow">Source</a>
+    <a href="/nlab/source/pion" id="view_source" rel="nofollow">Source</a>
   </span>
 
   
