--- a/pages/9177.html
+++ b/pages/9177.html
@@ -312,590 +312,6 @@ margin-left: 0em;
 <div class='toc clickDown' tabindex='0'>
 <h3 id='context'>Context</h3>
 
-<h4 id='physics'>Physics</h4>
-
-<div class='hide'>
-<p><strong><a class='existingWikiWord' href='/nlab/show/physics'>physics</a></strong>, <a class='existingWikiWord' href='/nlab/show/mathematical+physics'>mathematical physics</a>, <a class='existingWikiWord' href='/nlab/show/philosophy+of+physics'>philosophy of physics</a></p>
-
-<h2 id='surveys_textbooks_and_lecture_notes'>Surveys, textbooks and lecture notes</h2>
-
-<ul>
-<li>
-<p><em><a class='existingWikiWord' href='/nlab/show/higher+category+theory+and+physics'>(higher) category theory and physics</a></em></p>
-</li>
-
-<li>
-<p><em><a class='existingWikiWord' href='/nlab/show/geometry+of+physics'>geometry of physics</a></em></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/books+and+reviews+in+mathematical+physics'>books and reviews</a>, <a class='existingWikiWord' href='/nlab/show/physics+resources'>physics resources</a></p>
-</li>
-</ul>
-<hr/>
-<p><a class='existingWikiWord' href='/nlab/show/theory+%28physics%29'>theory (physics)</a>, <a class='existingWikiWord' href='/nlab/show/model+%28in+theoretical+physics%29'>model (physics)</a></p>
-
-<p><a class='existingWikiWord' href='/nlab/show/experimental+observation'>experiment</a>, <a class='existingWikiWord' href='/nlab/show/measurement'>measurement</a>, <a class='existingWikiWord' href='/nlab/show/computable+physics'>computable physics</a></p>
-
-<ul>
-<li>
-<p><strong><a class='existingWikiWord' href='/nlab/show/mechanics'>mechanics</a></strong></p>
-
-<ul>
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/mass'>mass</a>, <a class='existingWikiWord' href='/nlab/show/charge'>charge</a>, <a class='existingWikiWord' href='/nlab/show/momentum'>momentum</a>, <a class='existingWikiWord' href='/nlab/show/angular+momentum'>angular momentum</a>, <a class='existingWikiWord' href='/nlab/show/moment+of+inertia'>moment of inertia</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/Hamiltonian+dynamics+on+Lie+groups'>dynamics on Lie groups</a></p>
-
-<ul>
-<li><a class='existingWikiWord' href='/nlab/show/rigid+body+dynamics'>rigid body dynamics</a></li>
-</ul>
-</li>
-</ul>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/field+%28physics%29'>field (physics)</a></p>
-
-<ul>
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/Lagrangian+density'>Lagrangian mechanics</a></p>
-
-<ul>
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/configuration+space'>configuration space</a>, <a class='existingWikiWord' href='/nlab/show/state'>state</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/action+functional'>action functional</a>, <a class='existingWikiWord' href='/nlab/show/Lagrangian+density'>Lagrangian</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/phase+space'>covariant phase space</a>, <a class='existingWikiWord' href='/nlab/show/Euler-Lagrange+equation'>Euler-Lagrange equations</a></p>
-</li>
-</ul>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/Hamiltonian+mechanics'>Hamiltonian mechanics</a></p>
-
-<ul>
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/phase+space'>phase space</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/symplectic+geometry'>symplectic geometry</a></p>
-
-<ul>
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/Poisson+manifold'>Poisson manifold</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/symplectic+manifold'>symplectic manifold</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/symplectic+groupoid'>symplectic groupoid</a></p>
-</li>
-</ul>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/multisymplectic+geometry'>multisymplectic geometry</a></p>
-
-<ul>
-<li><a class='existingWikiWord' href='/nlab/show/symplectic+Lie+n-algebroid'>n-symplectic manifold</a></li>
-</ul>
-</li>
-</ul>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/spacetime'>spacetime</a></p>
-
-<ul>
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/smooth+Lorentzian+space'>smooth Lorentzian manifold</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/special+relativity'>special relativity</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/general+relativity'>general relativity</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/gravity'>gravity</a></p>
-
-<ul>
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/supergravity'>supergravity</a>, <a class='existingWikiWord' href='/nlab/show/dilaton'>dilaton gravity</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/black+hole'>black hole</a></p>
-</li>
-</ul>
-</li>
-</ul>
-</li>
-</ul>
-</li>
-
-<li>
-<p><strong><a class='existingWikiWord' href='/nlab/show/classical+field+theory'>Classical field theory</a></strong></p>
-
-<ul>
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/classical+physics'>classical physics</a></p>
-
-<ul>
-<li><a class='existingWikiWord' href='/nlab/show/classical+mechanics'>classical mechanics</a></li>
-
-<li><a class='existingWikiWord' href='/nlab/show/wave'>waves</a> and <a class='existingWikiWord' href='/nlab/show/optics'>optics</a></li>
-
-<li><a class='existingWikiWord' href='/nlab/show/thermodynamics'>thermodynamics</a></li>
-</ul>
-</li>
-</ul>
-</li>
-
-<li>
-<p><strong><a class='existingWikiWord' href='/nlab/show/quantum+mechanics'>Quantum Mechanics</a></strong></p>
-
-<ul>
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/finite+quantum+mechanics+in+terms+of+dagger-compact+categories'>in terms of †-compact categories</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/quantum+information'>quantum information</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/Hamiltonian'>Hamiltonian operator</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/density+matrix'>density matrix</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/Kochen-Specker+theorem'>Kochen-Specker theorem</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/Bell%27s+theorem'>Bell&#39;s theorem</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/Gleason%27s+theorem'>Gleason&#39;s theorem</a></p>
-</li>
-</ul>
-</li>
-
-<li>
-<p><strong><a class='existingWikiWord' href='/nlab/show/quantization'>Quantization</a></strong></p>
-
-<ul>
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/geometric+quantization'>geometric quantization</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/deformation+quantization'>deformation quantization</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/path+integral'>path integral quantization</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/semiclassical+approximation'>semiclassical approximation</a></p>
-</li>
-</ul>
-</li>
-
-<li>
-<p><strong><a class='existingWikiWord' href='/nlab/show/quantum+field+theory'>Quantum Field Theory</a></strong></p>
-
-<ul>
-<li>
-<p>Axiomatizations</p>
-
-<ul>
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/AQFT'>algebraic QFT</a></p>
-
-<ul>
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/Wightman+axioms'>Wightman axioms</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/Haag-Kastler+axioms'>Haag-Kastler axioms</a></p>
-
-<ul>
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/operator+algebra'>operator algebra</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/causally+local+net+of+observables'>local net</a></p>
-</li>
-</ul>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/conformal+net'>conformal net</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/Reeh-Schlieder+theorem'>Reeh-Schlieder theorem</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/Osterwalder-Schrader+theorem'>Osterwalder-Schrader theorem</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/PCT+theorem'>PCT theorem</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/Bisognano-Wichmann+theorem'>Bisognano-Wichmann theorem</a></p>
-
-<ul>
-<li><a class='existingWikiWord' href='/nlab/show/modular+theory'>modular theory</a></li>
-</ul>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/spin-statistics+theorem'>spin-statistics theorem</a></p>
-
-<ul>
-<li><a class='existingWikiWord' href='/nlab/show/boson'>boson</a>, <a class='existingWikiWord' href='/nlab/show/fermion'>fermion</a></li>
-</ul>
-</li>
-</ul>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/FQFT'>functorial QFT</a></p>
-
-<ul>
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/cobordism'>cobordism</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/%28infinity%2Cn%29-category+of+cobordisms'>(∞,n)-category of cobordisms</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/cobordism+hypothesis'>cobordism hypothesis</a>-theorem</p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/extended+topological+quantum+field+theory'>extended topological quantum field theory</a></p>
-</li>
-</ul>
-</li>
-</ul>
-</li>
-
-<li>
-<p>Tools</p>
-
-<ul>
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/perturbative+quantum+field+theory'>perturbative quantum field theory</a>, <a class='existingWikiWord' href='/nlab/show/vacuum'>vacuum</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/effective+quantum+field+theory'>effective quantum field theory</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/renormalization'>renormalization</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/BV-BRST+formalism'>BV-BRST formalism</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/geometric+infinity-function+theory'>geometric ∞-function theory</a></p>
-</li>
-</ul>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/particle+physics'>particle physics</a></p>
-
-<ul>
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/phenomenology'>phenomenology</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/model+%28in+theoretical+physics%29'>models</a></p>
-
-<ul>
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/standard+model+of+particle+physics'>standard model of particle physics</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/fields+and+quanta+-+table'>fields and quanta</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/GUT'>Grand Unified Theories</a>, <a class='existingWikiWord' href='/nlab/show/MSSM'>MSSM</a></p>
-</li>
-</ul>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/scattering+amplitude'>scattering amplitude</a></p>
-
-<ul>
-<li><a class='existingWikiWord' href='/nlab/show/on-shell+recursion'>on-shell recursion</a>, <a class='existingWikiWord' href='/nlab/show/KLT+relations'>KLT relations</a></li>
-</ul>
-</li>
-</ul>
-</li>
-
-<li>
-<p>Structural phenomena</p>
-
-<ul>
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/universality+class'>universality class</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/quantum+anomaly'>quantum anomaly</a></p>
-
-<ul>
-<li><a class='existingWikiWord' href='/nlab/show/Green-Schwarz+mechanism'>Green-Schwarz mechanism</a></li>
-</ul>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/instanton'>instanton</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/spontaneously+broken+symmetry'>spontaneously broken symmetry</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/Kaluza-Klein+mechanism'>Kaluza-Klein mechanism</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/integrable+system'>integrable systems</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/holonomic+quantum+field'>holonomic quantum fields</a></p>
-</li>
-</ul>
-</li>
-
-<li>
-<p>Types of quantum field thories</p>
-
-<ul>
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/topological+quantum+field+theory'>TQFT</a></p>
-
-<ul>
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/2d+TQFT'>2d TQFT</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/Dijkgraaf-Witten+theory'>Dijkgraaf-Witten theory</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/Chern-Simons+theory'>Chern-Simons theory</a></p>
-</li>
-</ul>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/TCFT'>TCFT</a></p>
-
-<ul>
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/A-model'>A-model</a>, <a class='existingWikiWord' href='/nlab/show/B-model'>B-model</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/mirror+symmetry'>homological mirror symmetry</a></p>
-</li>
-</ul>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/QFT+with+defects'>QFT with defects</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/conformal+field+theory'>conformal field theory</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/%281%2C1%29-dimensional+Euclidean+field+theories+and+K-theory'>(1,1)-dimensional Euclidean field theories and K-theory</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/%282%2C1%29-dimensional+Euclidean+field+theory'>(2,1)-dimensional Euclidean field theory and elliptic cohomology</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/conformal+field+theory'>CFT</a></p>
-
-<ul>
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/Wess-Zumino-Witten+model'>WZW model</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/6d+%282%2C0%29-supersymmetric+QFT'>6d (2,0)-supersymmetric QFT</a></p>
-</li>
-</ul>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/gauge+theory'>gauge theory</a></p>
-
-<ul>
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/field+strength'>field strength</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/gauge+group'>gauge group</a>, <a class='existingWikiWord' href='/nlab/show/gauge+transformation'>gauge transformation</a>, <a class='existingWikiWord' href='/nlab/show/gauge+fixing'>gauge fixing</a></p>
-</li>
-
-<li>
-<p>examples</p>
-
-<ul>
-<li><a class='existingWikiWord' href='/nlab/show/electromagnetic+field'>electromagnetic field</a>, <a class='existingWikiWord' href='/nlab/show/quantum+electrodynamics'>QED</a></li>
-</ul>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/electric+charge'>electric charge</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/magnetic+charge'>magnetic charge</a></p>
-
-<ul>
-<li><a class='existingWikiWord' href='/nlab/show/Yang-Mills+field'>Yang-Mills field</a>, <a class='existingWikiWord' href='/nlab/show/QCD'>QCD</a></li>
-</ul>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/Yang-Mills+theory'>Yang-Mills theory</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/The+Dirac+Electron'>spinors in Yang-Mills theory</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/topological+Yang-Mills+theory'>topological Yang-Mills theory</a></p>
-
-<ul>
-<li><a class='existingWikiWord' href='/nlab/show/Kalb-Ramond+field'>Kalb-Ramond field</a></li>
-
-<li><a class='existingWikiWord' href='/nlab/show/supergravity+C-field'>supergravity C-field</a></li>
-
-<li><a class='existingWikiWord' href='/nlab/show/RR+field'>RR field</a></li>
-
-<li><a class='existingWikiWord' href='/nlab/show/first-order+formulation+of+gravity'>first-order formulation of gravity</a></li>
-</ul>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/general+covariance'>general covariance</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/supergravity'>supergravity</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/D%27Auria-Fre+formulation+of+supergravity'>D&#39;Auria-Fre formulation of supergravity</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/gravity+as+a+BF+theory'>gravity as a BF-theory</a></p>
-</li>
-</ul>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/sigma-model'>sigma-model</a></p>
-
-<ul>
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/particle'>particle</a>, <a class='existingWikiWord' href='/nlab/show/relativistic+particle'>relativistic particle</a>, <a class='existingWikiWord' href='/nlab/show/fundamental+particle'>fundamental particle</a>, <a class='existingWikiWord' href='/nlab/show/spinning+particle'>spinning particle</a>, <a class='existingWikiWord' href='/nlab/show/superparticle'>superparticle</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/string'>string</a>, <a class='existingWikiWord' href='/nlab/show/spinning+string'>spinning string</a>, <a class='existingWikiWord' href='/nlab/show/superstring'>superstring</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/supermembrane'>membrane</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/AKSZ+sigma-model'>AKSZ theory</a></p>
-</li>
-</ul>
-</li>
-</ul>
-</li>
-</ul>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/string+theory'>String Theory</a></p>
-
-<ul>
-<li><a class='existingWikiWord' href='/nlab/show/string+theory+results+applied+elsewhere'>string theory results applied elsewhere</a></li>
-</ul>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/number+theory+and+physics'>number theory and physics</a></p>
-
-<ul>
-<li><a class='existingWikiWord' href='/nlab/show/Riemann+hypothesis+and+physics'>Riemann hypothesis and physics</a></li>
-</ul>
-</li>
-</ul>
-<div>
-<p>
-  <a href='/nlab/edit/physicscontents'>Edit this sidebar</a>
-</p>
-</div></div>
-
 <h4 id='fields_and_quanta'>Fields and quanta</h4>
 
 <div class='hide'>
@@ -950,6 +366,10 @@ margin-left: 0em;
 <ul>
 <li>
 <p><a class='existingWikiWord' href='/nlab/show/meson'>meson</a></p>
+
+<ul>
+<li><a class='existingWikiWord' href='/nlab/show/pion'>pion</a></li>
+</ul>
 </li>
 
 <li>
@@ -1027,14 +447,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Created on January 10, 2013 19:55:06 
+  Revised on September 30, 2017 12:40:50 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (89.204.153.52)
+  (94.220.50.90)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/electron" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  <a href="/nlab/edit/electron" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/electron/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/electron" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/electron" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
