--- a/pages/11262.html
+++ b/pages/11262.html
@@ -308,16 +308,19 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <p>
- 
- 
-</p>
+    <h1 id='kurt_gdel'>Kurt Gödel</h1>
+<div class='maruku_toc'><ul><li><a href='#introduction'>Introduction</a></li><li><a href='#references'>References</a></li><li><a href='#related_lab_entries'>Related <math class='maruku-mathml' display='inline' id='mathml_a39c2d8b3710312b2985972a76180cb3aee75ad0_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>Lab entries</a></li></ul></div>
+<h2 id='introduction'>Introduction</h2>
+
+<p>Kurt Gödel is one of the major figures of <a class='existingWikiWord' href='/nlab/show/logic'>logic</a> and <a class='existingWikiWord' href='/nlab/show/foundation+of+mathematics'>foundations</a> from the early 20th century.</p>
+
+<h2 id='references'>References</h2>
 
 <ul>
 <li><a href='http://en.wikipedia.org/wiki/Kurt_Gödel'>Wikipedia entry</a></li>
 </ul>
 
-<h2 id='related_lab_entries'>related <math class='maruku-mathml' display='inline' id='mathml_1ced4531619d74b214b681ed91cc173f2ea0e7ca_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>Lab entries</h2>
+<h2 id='related_lab_entries'>Related <math class='maruku-mathml' display='inline' id='mathml_a39c2d8b3710312b2985972a76180cb3aee75ad0_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>Lab entries</h2>
 
 <ul>
 <li>
@@ -331,6 +334,10 @@ margin-left: 0em;
 <li>
 <p><a class='existingWikiWord' href='/nlab/show/continuum+hypothesis'>continuum hypothesis</a></p>
 </li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/NBG'>NBG</a> set theory</p>
+</li>
 </ul>
 
 <p><div class='property'> category: <a class='category_link' href='/nlab/list/people'>people</a></div></p>
@@ -338,18 +345,27 @@ margin-left: 0em;
 <p>
  
  
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
 </p>
 </div>
 
 <div class="revisedby">
-  Revised on August 16, 2014 00:43:24 
-  by <a class="existingWikiWord" href="/nlab/show/Thomas+Holder">Thomas Holder</a>
-  (89.204.155.119)
+  Revised on October  1, 2017 01:55:47 
+  by <a class="existingWikiWord" href="/nlab/show/Toby+Bartels">Toby Bartels</a>
+  (2605:6000:2b44:1100:c033:bff9:3b27:13e2)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Kurt+G%C3%B6del" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Kurt+G%C3%B6del/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/Kurt+G%C3%B6del" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Kurt+G%C3%B6del" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Kurt+G%C3%B6del" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Kurt+G%C3%B6del/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/Kurt+G%C3%B6del" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Kurt+G%C3%B6del" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
