--- a/pages/4788.html
+++ b/pages/4788.html
@@ -726,13 +726,13 @@ margin-left: 0em;
 <li><a class='existingWikiWord' href='/nlab/show/Georges+Maltsiniotis'>Georges Maltsiniotis</a>, <em>Infini groupoïdes d’après Grothendieck</em> (<a href='http://www.math.jussieu.fr/~maltsin/textes.html'>web</a>)</li>
 </ul>
 
-<p>A comprehensive account of a simplified version of the definition and its generalization from <math class='maruku-mathml' display='inline' id='mathml_39a67e36224048d687bbe177484b5fa3bd5f5db9_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>∞</mn></mrow><annotation encoding='application/x-tex'>\infty</annotation></semantics></math>-groupoids to <math class='maruku-mathml' display='inline' id='mathml_39a67e36224048d687bbe177484b5fa3bd5f5db9_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>∞</mn></mrow><annotation encoding='application/x-tex'>\infty</annotation></semantics></math>-categories is given in</p>
+<p>A comprehensive account of a simplified version of the definition and its generalization from <math class='maruku-mathml' display='inline' id='mathml_2d1c33f28627bc6f1841cfbcc8e5dc92fca3f7f7_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>∞</mn></mrow><annotation encoding='application/x-tex'>\infty</annotation></semantics></math>-groupoids to <math class='maruku-mathml' display='inline' id='mathml_2d1c33f28627bc6f1841cfbcc8e5dc92fca3f7f7_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>∞</mn></mrow><annotation encoding='application/x-tex'>\infty</annotation></semantics></math>-categories is given in</p>
 
 <ul>
-<li><a class='existingWikiWord' href='/nlab/show/Georges+Maltsiniotis'>Georges Maltsiniotis</a>, <em>Grothendieck <math class='maruku-mathml' display='inline' id='mathml_39a67e36224048d687bbe177484b5fa3bd5f5db9_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>∞</mn></mrow><annotation encoding='application/x-tex'>\infty</annotation></semantics></math>-groupoids and still another definition of <math class='maruku-mathml' display='inline' id='mathml_39a67e36224048d687bbe177484b5fa3bd5f5db9_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>∞</mn></mrow><annotation encoding='application/x-tex'>\infty</annotation></semantics></math>-categories</em> (<a href='http://arxiv.org/abs/1009.2331'>arXiv:1009.2331</a>)</li>
+<li><a class='existingWikiWord' href='/nlab/show/Georges+Maltsiniotis'>Georges Maltsiniotis</a>, <em>Grothendieck <math class='maruku-mathml' display='inline' id='mathml_2d1c33f28627bc6f1841cfbcc8e5dc92fca3f7f7_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>∞</mn></mrow><annotation encoding='application/x-tex'>\infty</annotation></semantics></math>-groupoids and still another definition of <math class='maruku-mathml' display='inline' id='mathml_2d1c33f28627bc6f1841cfbcc8e5dc92fca3f7f7_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>∞</mn></mrow><annotation encoding='application/x-tex'>\infty</annotation></semantics></math>-categories</em> (<a href='http://arxiv.org/abs/1009.2331'>arXiv:1009.2331</a>)</li>
 </ul>
 
-<p>A definition as models of a type theory is given in</p>
+<p>A definition as <a class='existingWikiWord' href='/nlab/show/model'>models</a> of a <a class='existingWikiWord' href='/nlab/show/dependent+type+theory'>dependent type theory</a> is given in</p>
 
 <ul>
 <li><a class='existingWikiWord' href='/nlab/show/Eric+Finster'>Eric Finster</a>, <a class='existingWikiWord' href='/nlab/show/Samuel+Mimram'>Samuel Mimram</a>, <em>A Type-Theoretical Definition of Weak ω-Categories</em> (<a href='https://arxiv.org/abs/1706.02866'>arxiv:1706.02866</a>)</li>
@@ -741,7 +741,7 @@ margin-left: 0em;
 <p>The relation to <a class='existingWikiWord' href='/nlab/show/Batanin+omega-category'>Batanin ω-categories</a> is discussed in</p>
 
 <ul>
-<li id='Ara10'><a class='existingWikiWord' href='/nlab/show/Dimitri+Ara'>Dimitri Ara</a>, <em>Sur les <math class='maruku-mathml' display='inline' id='mathml_39a67e36224048d687bbe177484b5fa3bd5f5db9_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>∞</mn></mrow><annotation encoding='application/x-tex'>\infty</annotation></semantics></math>-groupoïdes de Grothendieck</em> Thesis, under the supervision of G. Maltsiniotis, (2010) (<a href='http://www.normalesup.org/~ara/files/these.pdf'>pdf</a>)</li>
+<li id='Ara10'><a class='existingWikiWord' href='/nlab/show/Dimitri+Ara'>Dimitri Ara</a>, <em>Sur les <math class='maruku-mathml' display='inline' id='mathml_2d1c33f28627bc6f1841cfbcc8e5dc92fca3f7f7_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>∞</mn></mrow><annotation encoding='application/x-tex'>\infty</annotation></semantics></math>-groupoïdes de Grothendieck</em> Thesis, under the supervision of G. Maltsiniotis, (2010) (<a href='http://www.normalesup.org/~ara/files/these.pdf'>pdf</a>)</li>
 </ul>
 
 <p>A brief survey is provided in</p>
@@ -782,14 +782,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on October  3, 2017 10:24:19 
-  by <a class="existingWikiWord" href="/nlab/show/AnonymousCoward">Anonymous</a>
-  (193.55.176.111)
+  Revised on October  3, 2017 16:17:40 
+  by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
+  (77.56.177.247)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Grothendieck-Maltsiniotis+infinity-category" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Grothendieck-Maltsiniotis+infinity-category/5" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(5 revisions)</span> | <a href="/nlab/show/diff/Grothendieck-Maltsiniotis+infinity-category" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Grothendieck-Maltsiniotis+infinity-category" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Grothendieck-Maltsiniotis+infinity-category" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Grothendieck-Maltsiniotis+infinity-category/6" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(6 revisions)</span> | <a href="/nlab/show/diff/Grothendieck-Maltsiniotis+infinity-category" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Grothendieck-Maltsiniotis+infinity-category" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
